--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
   }
 @media (max-width: 768px) {
   .navbar .d-flex {
-            flex-direction: row;
-            flex-wrap: nowrap;
-            overflow-x: auto;
-            gap: 0.5rem;
-            margin-top: 10px;
-            scrollbar-width: none;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 0.5rem;
+    margin-top: 10px;
+    scrollbar-width: none;
   }
   .navbar-nav {
-    text-align: center;
+    text-align: end;
   }
   .navbar-nav .nav-link {
     padding-left: 0 !important;
