--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     scrollbar-width: none;
   }
   .navbar-nav {
-    text-align: end;
+    text-align: start;
   }
   .navbar-nav .nav-link {
     padding-left: 0 !important;
