--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
     scrollbar-width: none;
   }
   .navbar-nav {
-    text-align: start;
+    text-align: end;
   }
-  .navbar-nav .nav-link {
+  /* .navbar-nav .nav-link {
     padding-left: 0 !important;
-  }
+  } */
 .showcase-box {
     border-radius: 0;
     max-height: 300px;
