--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     background-color: rgb(58, 109, 146);
   }
 @media (max-width: 768px) {
-  .navbar .d-flex {
+  /* .navbar .d-flex {
     flex-direction: row;
     flex-wrap: nowrap;
     overflow-x: auto;
@@ -156,7 +156,7 @@
   }
   .navbar-nav {
     text-align: start;
-  }
+  } */
   /* .navbar-nav .nav-link {
     padding-left: 0 !important;
   } */
