--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
 
   footer{
     background-color: rgb(58, 109, 146);
+    text-align: center;
   }
 @media (max-width: 768px) {
-  /* .navbar .d-flex {
+  .navbar .d-flex {
     flex-direction: row;
     flex-wrap: nowrap;
     overflow-x: auto;
@@ -156,7 +157,7 @@
   }
   .navbar-nav {
     text-align: start;
-  } */
+  }
   /* .navbar-nav .nav-link {
     padding-left: 0 !important;
   } */
@@ -219,21 +220,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
-                    <li class="nav-item">
-                        <a class="nav-link active fw-bold" style="color: rgba(6, 37, 74, 0.797);" aria-current="page" href="#">Home</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-bold" style="color: rgba(6, 37, 74, 0.797);" href="./index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./products.html">Products</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="./products.html">Products</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="#">Gifting</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="#">Gifting</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./about.html">About</a>
+                    <li class="nav-item me-1">
+                        <a class="nav-link fw-semibold" href="./about.html">About</a>
                     </li>
                 </ul>
 
-                <div class="d-flex align-items-center flex-wrap ms-4 me-3 my-2 my-lg-0">
+                <div class="d-flex align-items-center flex-wrap  me-3 my-2 my-lg-0">
                     <form class="d-flex me-2">
                         <div class="position-relative">
                             <i class="fa-solid fa-magnifying-glass position-absolute" style="top: 50%; left: 1rem; transform: translateY(-50%); color: #616466;"></i>
