--- a/perfume.html
+++ b/perfume.html
@@ -10,27 +10,27 @@
 <style>
 
 .navbar-brand {
-          outline: none;
-          box-shadow: none;
-      }
+  outline: none;
+  box-shadow: none;
+}
 
 
 
 .leftimgs {
-    width: 100px;
-    height: auto;
-    cursor: pointer;
+  width: 100px;
+  height: auto;
+  cursor: pointer;
 }
 
 
 .perfume img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .perfume {
-    position: relative;
-    display: inline;
+  position: relative;
+  display: inline;
 }
 
 .icons {
@@ -95,7 +95,17 @@ footer{
   background-color: rgb(58, 109, 146);
 }
 @media (max-width: 768px){
-
+.navbar .d-flex {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 0.5rem;
+    margin-top: 10px;
+    scrollbar-width: none;
+  }
+  .navbar-nav {
+    text-align: start;
+  }
 footer{
     text-align: center;
   }
@@ -114,21 +124,21 @@ footer{
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
-                    <li class="nav-item">
-                        <a class="nav-link active fw-bold" style="color: rgba(6, 37, 74, 0.797);" aria-current="page" href="./index.html">Home</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-bold" style="color: rgba(6, 37, 74, 0.797);" href="./index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./products.html">Products</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="./products.html">Products</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="#">Gifting</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="#">Gifting</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./about.html">About</a>
+                    <li class="nav-item me-1">
+                        <a class="nav-link fw-semibold" href="./about.html">About</a>
                     </li>
                 </ul>
 
-                <div class="d-flex align-items-center flex-wrap ms-4 me-3 my-2 my-lg-0">
+                <div class="d-flex align-items-center flex-wrap  me-3 my-2 my-lg-0">
                     <form class="d-flex me-2">
                         <div class="position-relative">
                             <i class="fa-solid fa-magnifying-glass position-absolute" style="top: 50%; left: 1rem; transform: translateY(-50%); color: #616466;"></i>
@@ -145,7 +155,7 @@ footer{
                             <i class="fa-solid fa-bell" style="color: #000000;"></i>
                         </span>
                     </a>
-                    <a class="nav-link ms-2" href="#">
+                    <a class="nav-link ms-2" href="./signup.html">
                         <span class="d-inline-flex align-items-center justify-content-center bg-light border shadow-sm rounded-circle" style="width: 40px; height: 40px;">
                             <i class="fa-solid fa-user" style="color: #000000;"></i>
                         </span>
