--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
 <style>
-  navbar-brand {
+  .navbar-brand {
     outline: none;
     box-shadow: none;
   }
@@ -36,6 +36,17 @@ footer{
 
 
 @media (max-width: 768px){
+  .navbar .d-flex {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 0.5rem;
+    margin-top: 10px;
+    scrollbar-width: none;
+  }
+  .navbar-nav {
+    text-align: start;
+  }
   h1{
     font-size: 1.8rem;
   }
@@ -53,27 +64,27 @@ footer{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
         <div class="container-fluid p-3">
-            <a class="navbar-brand fw-bold ps-md-5 pe-md-3" href="./index.html" style="color: rgb(11, 60, 93); font-size: clamp(24px, 5vw, 30px);">Fragranzia</a>
+            <a class="navbar-brand fw-bold ps-md-5 pe-md-3" href="index.html" style="color: rgb(11, 60, 93); font-size: clamp(24px, 5vw, 30px);">Fragranzia</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
-                    <li class="nav-item">
-                        <a class="nav-link active fw-bold" style="color: rgba(6, 37, 74, 0.797);" aria-current="page" href="./index.html">Home</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-bold" style="color: rgba(6, 37, 74, 0.797);" href="./index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./products.html">Products</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="./products.html">Products</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="#">Gifting</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="#">Gifting</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./about.html">About</a>
+                    <li class="nav-item me-1">
+                        <a class="nav-link fw-semibold" href="./about.html">About</a>
                     </li>
                 </ul>
 
-                <div class="d-flex align-items-center flex-wrap ms-4 me-3 my-2 my-lg-0">
+                <div class="d-flex align-items-center flex-wrap  me-3 my-2 my-lg-0">
                     <form class="d-flex me-2">
                         <div class="position-relative">
                             <i class="fa-solid fa-magnifying-glass position-absolute" style="top: 50%; left: 1rem; transform: translateY(-50%); color: #616466;"></i>
