--- a/payemnt.html
+++ b/payemnt.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 <style>
-    navbar-brand {
+    .navbar-brand {
           outline: none;
           box-shadow: none;
       }
@@ -42,7 +42,19 @@
         border-radius: 10px;
         font-weight: bold;
   }
-
+  @media (max-width: 768px) {
+  .navbar .d-flex {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 0.5rem;
+    margin-top: 10px;
+    scrollbar-width: none;
+  }
+  .navbar-nav {
+    text-align: start;
+  }
+}
     
   </style>
 </head>
@@ -56,21 +68,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
-                    <li class="nav-item">
-                        <a class="nav-link active fw-bold" style="color: rgba(6, 37, 74, 0.797);" aria-current="page" href="./index.html">Home</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-bold" style="color: rgba(6, 37, 74, 0.797);" href="./index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./products.html">Products</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="./products.html">Products</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="#">Gifting</a>
+                    <li class="nav-item me-3">
+                        <a class="nav-link fw-semibold " href="#">Gifting</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link fw-semibold ps-4" href="./about.html">About</a>
+                    <li class="nav-item me-1">
+                        <a class="nav-link fw-semibold" href="./about.html">About</a>
                     </li>
                 </ul>
 
-                <div class="d-flex align-items-center flex-wrap ms-4 me-3 my-2 my-lg-0">
+                <div class="d-flex align-items-center flex-wrap  me-3 my-2 my-lg-0">
                     <form class="d-flex me-2">
                         <div class="position-relative">
                             <i class="fa-solid fa-magnifying-glass position-absolute" style="top: 50%; left: 1rem; transform: translateY(-50%); color: #616466;"></i>
@@ -87,7 +99,7 @@
                             <i class="fa-solid fa-bell" style="color: #000000;"></i>
                         </span>
                     </a>
-                    <a class="nav-link ms-2" href="#">
+                    <a class="nav-link ms-2" href="./signup.html">
                         <span class="d-inline-flex align-items-center justify-content-center bg-light border shadow-sm rounded-circle" style="width: 40px; height: 40px;">
                             <i class="fa-solid fa-user" style="color: #000000;"></i>
                         </span>
