--- a/perfume.html
+++ b/perfume.html
@@ -125,10 +125,10 @@ footer{
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
                     <li class="nav-item me-3">
-                        <a class="nav-link fw-bold" style="color: rgba(6, 37, 74, 0.797);" href="./index.html">Home</a>
+                        <a class="nav-link fw-bold" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item me-3">
-                        <a class="nav-link fw-semibold " href="./products.html">Products</a>
+                        <a class="nav-link fw-semibold "  style="color: rgba(6, 37, 74, 0.797);"  href="./products.html">Products</a>
                     </li>
                     <li class="nav-item me-3">
                         <a class="nav-link fw-semibold " href="#">Gifting</a>
