--- a/index.html
+++ b/index.html
@@ -219,8 +219,31 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
+
   .scroll-container {
-    padding-left: 0 !important;
+    padding-left: 1 !important;
+  }
+
+  .card-body {
+    padding: 0.2rem; /* Reduces the padding inside the card */
+  }
+
+  .card-body .card-text {
+    font-size: 0.75rem; /* Makes the paragraph text smaller */
+  }
+
+  .card-body .fw-bold {
+    font-size: 0.9rem; /* Makes the bold text smaller */
+  }
+  
+  .card .btn {
+    font-size: 0.8rem; /* Makes the button text smaller */
+    padding: 0.3rem 0.5rem; /* Reduces the button size */
+  }
+  .card-img-top {
+    width: 60%; /* Makes the image smaller */
+    height: 20%;
+    margin: 0 auto; /* Centers the smaller image */
   }
 }
 
@@ -457,7 +480,7 @@
 </div>
 
 
-<div class="d-flex justify-content-between align-items-center mb-3">
+<div class="d-flex justify-content-between align-items-center mb-3 ms-1">
   <h3 class="fw-bold mb-0">
     <span class="text-dark ps-5">Featured</span>
     <span style="color:navy">Collections</span>
