--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
   }
 
   .scroll-container {
-    padding-left: 1 !important;
+    padding-left: 0 !important;
+    margin-left: 1 !important;
   }
 
   .card-body {
