--- a/cart.html
+++ b/cart.html
@@ -22,8 +22,14 @@
    
   footer{
     background-color: rgb(58, 109, 146);
-  }
+    text-align: start;
 
+  }
+@media (max-width: 767px) {
+  footer {
+    text-align: center;
+  }
+}
 
 @media (min-width: 768px){
   .navbar .d-flex {
@@ -37,9 +43,8 @@
   .navbar-nav {
     text-align: start;
   }
-  footer{
-    text-align: center;
-  }
+  
+  
 .checkout-box {
         position: fixed;
         margin-right: auto;
@@ -48,7 +53,7 @@
         z-index: 1000;
      }
   }
-
+ 
 </style>
 </head>
 <body>
@@ -240,7 +245,7 @@
       <ul style="list-style: none;">
 
         <li><a href="./index.html" style="color: #000000; text-decoration: none;">Home</a></li>
-        <li><a href="./products.html" style="color: #000000; text-decoration: none;">Products</a></li>
+        <li><a href="products.html" style="color: #000000; text-decoration: none;">Products</a></li>
         <li><a href="" style="color: #000000; text-decoration: none;">Gifting</a></li>
         <li><a href="/about.html" style="color: #000000; text-decoration: none;">About</a></li>
         <li><a href="" style="color: #000000; text-decoration: none;">Profile</a></li>
@@ -275,22 +280,23 @@
   </div>
   
   <div class="row mt-2 pt-3" style="border-top: 3px solid black;">
-    <div class="col-md-2 ps-4">
-      <p>Web acccesibility</p>
-    </div>
-    <div class="col-md-2">
-      <p>Term of use</p>
-    </div>
-     <div class="col-md-2">
-      <p>Privacy Statement</p>
-    </div>
-     <div class="col-md-2">
-      <p>Contact Us</p>
-    </div>
-     <div class="col-md-3 text-end">
-      <p>@ 2024 Fragranzia Company. All rights reserved.</p>
-    </div>
+  <div class="col-md-2 ps-4">
+    <a href="/accessibility" style="text-decoration: none; color: black;">Web accessibility</a>
   </div>
+  <div class="col-md-2">
+    <a href="/terms" style="text-decoration: none; color: black;">Terms of use</a>
+  </div>
+  <div class="col-md-2">
+    <a href="/privacy" style="text-decoration: none; color: black;">Privacy Statement</a>
+  </div>
+  <div class="col-md-2">
+    <a href="/contact" style="text-decoration: none; color: black;">Contact Us</a>
+  </div>
+  <div class="col-md-3 text-end">
+    <p>@ 2024 Fragranzia Company. All rights reserved.</p>
+  </div>
+</div>
+
 </footer>
 
     
