--- a/payemnt.html
+++ b/payemnt.html
@@ -36,9 +36,9 @@
     }
     .btn-uniform {
         
-        width: 100%;
+        width: 150px;
         max-width: 200px;
-        padding: 12px 20px;
+        padding: 10px 15px;
         border-radius: 10px;
         font-weight: bold;
   }
@@ -53,6 +53,17 @@
   }
   .navbar-nav {
     text-align: start;
+  }
+  .product-box {
+    flex-direction: column !important;
+    align-items: center;
+    text-align: center;
+  }
+
+  .product-box img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
   }
 }
     
@@ -114,8 +125,8 @@
     <div class="row g-4">
       <div class="col-lg-8">
         <div class="card p-3 mb-4">
-          <div class="d-flex">
-            <img src="./images/perfume.png" class="img-fluid rounded" alt="Product" style="width: 200px;height: auto;" >
+          <div class="d-flex product-box">
+            <img src="./images/purchasepage.jpg" class="img-fluid rounded" alt="Product" style="max-width: 200px; max-height: 200px;" >
             <div class="ms-3">
               <h3 class="fw">Autograph eau de parfum 100ml for men</h3>
               <p class="text-muted">Autograph</p>
@@ -163,6 +174,8 @@
           <p class="mb-1">+91 9876543210</p>
         </div>
       </div>
+
+  
 
       <div class="col-lg-4">
         <div class="card p-3 mb-4">
