--- a/products.html
+++ b/products.html
@@ -128,20 +128,21 @@
 
   <div class="container my-4">
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-2">
-      <h3 class="fw-bold mb-2 mb-md-0">All Products</h3>
+  <h3 class="fw-bold mb-2 mb-md-0">All Products</h3>
 
-      <div class="d-flex align-items-center gap-3 sort-bar">
-        <span class="fw-bold">Sort By:</span>
-        <a href="#" class="text-decoration-none text-dark fw-bold">Relevance</a>
-        <a href="#" class="text-decoration-none text-muted">Newest First</a>
-        <a href="#" class="text-decoration-none text-muted">Popularity</a>
-        <a href="#" class="text-decoration-none text-muted">Price–Low to High</a>
-        <a href="#" class="text-decoration-none text-muted">Price–High to Low</a>
-        <button class="btn btn-outline-dark btn-sm ms-2">
-          <i class="fa fa-filter"></i> Filter
-        </button>
-      </div>
-    </div>
+  <div class="d-flex align-items-center flex-wrap gap-2 sort-bar">
+    <span class="fw-bold text-nowrap">Sort By:</span>
+    <a href="#" class="text-decoration-none text-dark fw-bold text-nowrap">Relevance</a>
+    <a href="#" class="text-decoration-none text-muted text-nowrap">Newest First</a>
+    <a href="#" class="text-decoration-none text-muted text-nowrap">Popularity</a>
+    <a href="#" class="text-decoration-none text-muted text-nowrap">Price–Low to High</a>
+    <a href="#" class="text-decoration-none text-muted text-nowrap">Price–High to Low</a>
+    <button class="btn btn-outline-dark btn-sm ms-2 text-nowrap">
+      <i class="fa fa-filter"></i> Filter
+    </button>
+  </div>
+</div>
+
 
     <p class="text-muted small mb-3">Home > Products</p>
 
