--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
   .newarrival-text {
     font-size: 1.4rem;
-    padding-bottom: 30%;
+    margin-bottom: 30%;
   }
 
   footer{
@@ -586,7 +586,7 @@
 
     <div class="newarrival-card" style="background-image: url('./images/bstseller.png');">
       <div class="overlay"></div>
-      <div class="newarrival-text ">Best Sellers</div>
+      <div class="newarrival-text mb-2">Best Sellers</div>
     </div>
 
   </div>
