--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 
     .newarrival-card:hover .newarrival-text {
       opacity: 1;
+      padding-bottom: 40px;
     }
 
   footer{
@@ -206,14 +207,12 @@
 
   .newarrival-text {
     font-size: 1.4rem;
-    margin-bottom: 30%;
-  }
-
+    }
   footer{
     text-align: center;
   }
   .seeall {
-    font-size: .8rem !important; /* Makes the "see all" link smaller */
+    font-size: .8rem !important; 
   }
   
 }
